# clem

./: Cargo.toml  FORMAT.md  rustfmt.toml
clemacros/: Cargo.toml
src/: dataset.rs  dictionary.rs  error.rs  io.rs  lib.rs  manifest.rs  query.rs  schema.rs  segment.rs  stream.rs  substream.rs
